layout: mobile 5-tab bottom bar; avatar->settings; notifications top-right; brand centered; per-page search; header autohide (up hide/down show); settings safe-bottom; desktop sidebar profile on top; no sidebar settings; hover-expand; underline fixed; light theme switch; profile gate + kids filter + per-profile histories

--- a/site/food.html
+++ b/site/food.html
@@ -13,25 +13,16 @@
 
 <header class="header">
   <div class="header-inner">
-    <!-- Left: profile (tap -> Settings) -->
     <a href="settings.html" title="Profile & Settings"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
-    <!-- Center: brand -->
     <div class="brand">
       <img src="img/logo.svg" alt="logo"/>
-      <div>
-        <h1>VibriNova</h1>
-        <small class="text-muted">The Digital Multiplex</small>
-      </div>
+      <div><h1>VibriNova</h1><small class="text-muted">The Digital Multiplex</small></div>
     </div>
-    <!-- Right: notifications -->
-    <div class="header-actions">
-      <a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
-    </div>
+    <div class="header-actions"><a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a></div>
   </div>
 </header>
-
 <nav class="nav">
-  <!-- Desktop-only profile at top of sidebar -->
+  <!-- Desktop-only profile at top -->
   <div class="nav-group profile only-desktop">
     <a href="settings.html" data-page="profile" title="Profile & Settings">
       <div class="icon-wrap"><span id="sidebar-avatar" class="avatar-tiny">P</span></div>
@@ -39,21 +30,13 @@
       <span class="underline"></span>
     </a>
   </div>
-
-  <!-- Main tabs (MOBILE: Stream, Food, Chat, Tickets, Play only) -->
+  <!-- Main 5 tabs (no Settings here) -->
   <div class="nav-group top">
     <a href="index.html" data-page="stream" title="Stream"><div class="icon-wrap"><i data-lucide="clapperboard"></i></div><span class="label">Stream</span><span class="underline"></span></a>
     <a href="food.html" data-page="food" title="Food"><div class="icon-wrap"><i data-lucide="utensils-crossed"></i></div><span class="label">Food</span><span class="underline"></span></a>
     <a href="chat.html" data-page="chat" title="Chat"><div class="icon-wrap"><i data-lucide="message-square"></i></div><span class="label">Chat</span><span class="underline"></span></a>
     <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
     <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
-  </div>
-
-  <!-- Desktop-only alerts near bottom -->
-  <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts">
-      <div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span>
-    </a>
   </div>
 </nav>
 
@@ -66,10 +49,7 @@
       <button type="button" class="icon-btn clear-btn" title="Clear"><i data-lucide="x"></i></button>
     </form>
   </div>
-  <section class="card section">
-    <p class="text-muted">EatSure-inspired — assured quality badges, combos, filters, tracking.</p>
-  </section>
-
+  <section class="card section"><p class="text-muted">EatSure-inspired — assured quality badges, combos, filters, tracking.</p></section>
   <h3 class="section-title">Popular Restaurants</h3>
   <div class="grid auto">
     <div class="poster card"><img src="https://picsum.photos/seed/food1/900/600" alt="">
