--- a/site/settings.html
+++ b/site/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <title>VibriNova — Digital Multiplex</title><meta name="description" content="Settings and customizations"/>
+    <title>VibriNova — Digital Multiplex</title><meta name="description" content="Settings"/>
     <meta name="theme-color" content="#0b1220"/><link rel="icon" href="img/logo.svg"/>
     <link rel="preconnect" href="https://unpkg.com"/><link rel="stylesheet" href="assets/style.css"/>
     <script defer src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
@@ -27,9 +27,6 @@
     <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
     <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
   </div>
-  <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts"><div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span></a>
-  </div>
 </nav>
 
 <main class="container safe-bottom">
@@ -42,7 +39,7 @@
     </section>
     <section class="card section">
       <h3>Theme colors</h3>
-      <div class="text-muted" style="font-size:12px">Pick a palette or set your own.</div>
+      <div class="text-muted" style="font-size:12px">Choose a palette or customize.</div>
       <div class="swatches">
         <button class="swatch" style="background:linear-gradient(135deg,#6EE7F9,#8B5CF6)" data-p="#6EE7F9" data-a="#8B5CF6" title="Aurora"></button>
         <button class="swatch" style="background:linear-gradient(135deg,#60A5FA,#34D399)" data-p="#60A5FA" data-a="#34D399" title="Lagoon"></button>
@@ -50,23 +47,11 @@
         <button class="swatch" style="background:linear-gradient(135deg,#FCA5A5,#EF4444)" data-p="#FCA5A5" data-a="#EF4444" title="Coral"></button>
         <button class="swatch" style="background:linear-gradient(135deg,#A78BFA,#22D3EE)" data-p="#A78BFA" data-a="#22D3EE" title="Plasma"></button>
       </div>
-      <div class="picker">
-        <label>Primary <input id="pick-primary" type="color" value="#6EE7F9"/></label>
-        <label>Accent <input id="pick-accent" type="color" value="#8B5CF6"/></label>
-        <button id="apply-colors" class="btn">Apply</button>
-      </div>
+      <div class="picker"><label>Primary <input id="pick-primary" type="color" value="#6EE7F9"/></label><label>Accent <input id="pick-accent" type="color" value="#8B5CF6"/></label><button id="apply-colors" class="btn">Apply</button></div>
     </section>
-    <section class="card section"><h3>Parental control</h3><label class="kv"><span>Kids restrictions</span><input type="checkbox" checked/></label><p class="text-muted" style="font-size:12px">Basic UI toggle (demo).</p></section>
+    <section class="card section"><h3>Parental control</h3><label class="kv"><span>Kids restrictions</span><input type="checkbox" checked/></label></section>
     <section class="card section"><h3>Activate device</h3><div class="kv"><input id="device-name" class="input" placeholder="Device name" value="My Device"/><button id="gen-device" class="btn-primary btn">Generate 8‑char code</button></div><div id="devices-list" class="mt-2"></div></section>
-    <section class="card section"><h3>Profile lock</h3><div class="kv"><input id="profile-pwd" class="input" type="password" placeholder="New password (optional)"/><button id="save-profile-pwd" class="btn">Save</button></div><p class="text-muted" style="font-size:12px">Locks the active profile (local only in this demo).</p></section>
     <section class="card section"><h3>History</h3><div id="histories" class="text-muted">Search entries: 0 • Watched: 0</div><button id="clear-histories" class="btn mt-2">Clear histories</button></section>
-    <section class="card section"><h3>Help & feedback</h3>
-      <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:8px">
-        <a class="btn" href="mailto:support@example.com?subject=Help%20with%20VibriNova">Customer care</a>
-        <a class="btn" href="mailto:bugs@example.com?subject=Bug%20report%20VibriNova">Report a bug</a>
-        <a class="btn" href="mailto:feedback@example.com?subject=Feedback%20for%20VibriNova">Send feedback</a>
-      </div>
-    </section>
   </div>
 </main>
 </body></html>
